# MegEngine

./: .clang-format  .gdbinit  .gitattributes  .gitignore  .gitmodules  ACKNOWLEDGMENTS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING_CN.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE  README.md  README_CN.md  commitlint.config.js
dnn/: CMakeLists.txt
dnn/atlas-stub/: CMakeLists.txt
dnn/atlas-stub/src/: libacl_cblas-wrap.cpp  libacl_cblas-wrap.h  libacl_cblas-wrap_1.8.0.h  libatlas-wrap.cpp  libatlas-wrap.h  libatlas-wrap_1.1.0.h  libatlas-wrap_1.8.0.h
dnn/cuda-stub/: CMakeLists.txt
dnn/cuda-stub/src/: dlopen_helper.h  libcuda-wrap.h  libcuda-wrap_10.1.h  libcuda-wrap_10.2.h  libcuda-wrap_11.1.h  libcuda-wrap_11.2.h  libcuda-wrap_11.4.h  libcuda-wrap_11.8.h  libcuda.cpp  libnvrtc-wrap.h  libnvrtc.cpp  nvrtc_type.h
dnn/include/: hip_header.h  megcore.h  megcore_atlas.h  megcore_cambricon.h  megcore_cdefs.h  megcore_cuda.h  megcore_rocm.h  megdnn.h
dnn/include/hcc_detail/: hcc_defs_epilogue.h  hcc_defs_epilogue.h.in  hcc_defs_prologue.h  hcc_defs_prologue.h.in
dnn/include/megdnn/: algorithm_cache.h  arch.h  basic_types.h  common.h  cuda.h  dtype.h  handle.h  heuristic_cache.h  named_tensor.h  opr_result_defs.h  oprs.h  tensor_format.h  tensor_iter.h  version.h
dnn/scripts/: Makefile  gen_cond_take_kern_impls.py  gen_cuda_batch_conv_bias_kern_impls.py  gen_cuda_conv_bias_kern_impls.py  gen_elemwise_each_mode.py  gen_elemwise_kern_impls.py  gen_elemwise_multi_type_kern_impls.py  gen_elemwise_multi_type_utils.py  gen_elemwise_special_kern_impls.py  gen_elemwise_utils.py  gen_flatbuffers_converter.py  gen_flatbuffers_schema.py  gen_param_defs.py  gen_tablegen.py  opr_param_defs.py
dnn/scripts/cutlass_generator/: BUILD  README.md  conv2d_operation.py  gemm_operation.py  gen_list.py  generator.py  lazy_file.py  library.py  list.bzl  manifest.py
dnn/scripts/gen_heuristic/: gen_heuristic.py  get_params.template
dnn/src/: CMakeLists.txt
dnn/src/aarch64/: handle.cpp  handle.h
dnn/src/arm_common/: elemwise_op.h  handle.cpp  handle.h  intrinsic_helper.h  neon_struct.h  quantized_converter.h  utils.cpp  utils.h
dnn/src/armv7/: handle.cpp  handle.h
dnn/src/atlas/: atlas_wrapper.cpp  atlas_wrapper.h  handle.cpp  handle.h  utils.cpp  utils.h
dnn/src/cambricon/: BUILD  handle.cpp  handle.h  utils.cpp  utils.h  utils.mlu.h
dnn/src/common/: adaptive_pooling.cpp  add_update.cpp  add_update_helper.h  algo_base.cpp  algo_base.h  algo_chooser.h  algorithm_cache.cpp  api_cache.h  argmxx_helper.h  argsort.cpp  asm_common_defs.h  basic_types.cpp  batch_conv_bias.cpp  batch_normalization.cpp  batched_matrix_mul.cpp  check_has_inf.cpp  check_non_finite.cpp  checksum.cpp  concat_split.cpp  conv_bias.cpp  conv_bias.h  conv_pooling.cpp  convolution.cpp  convolution3d.cpp  correlation.cpp  cpuinfo_arch_vendor.cpp  cpuinfo_arch_vendor.h  cross.cpp  cumprod.cpp  cumsum.cpp  cvt_color.cpp  dct.cpp  deformable_conv.cpp  deformable_ps_roi_pooling.cpp  diag.cpp  dot.cpp  dropout.cpp  dtype.cpp  elemwise_helper.cpp  elemwise_helper.cuh  (+103 more)
dnn/src/cuda/: api_cache.h  atomic_add.cuh  cuda_shfl_compat.cuh  cudnn_with_check.h  cudnn_wrapper.cpp  cudnn_wrapper.h  cudnn_wrapper_v8.cpp  cudnn_wrapper_v8.h  elemwise_helper.cpp  elemwise_helper.cuh  elemwise_helper_q4.cuh  error_info.cuh  fp16_help.cuh  handle.cpp  handle.h  handle_create.cpp  int_fastdiv.cpp  int_fastdiv.cuh  integer_subbyte_utils.cuh  memory_utils.cuh  ptx_loader.cpp  ptx_loader.h  query_blocksize.cpp  query_blocksize.cuh  query_blocksize_impl.cu  reduce_helper.cuh  reduce_helper.cuinl  transpose_utils.cuh  utils.cpp  utils.cuh  utils.h
dnn/src/fallback/: elemwise_op.h  gi_intrinsic_helper.h  handle.cpp  handle.h  matrix_mul_helper.h  quantized_converter.h
dnn/src/naive/: handle.cpp  handle.h  lowbit_utils.cpp  lowbit_utils.h
dnn/src/rocm/: elemwise_helper.cpp  elemwise_helper.h.hip  error_info.h.hip  handle.cpp  handle.h  int_fastdiv.cpp  int_fastdiv.h.hip  miopen_with_check.h  miopen_wrapper.cpp  miopen_wrapper.h  reduce_helper.h.hip  utils.cpp  (+4 more)
dnn/test/: CMakeLists.txt  gtest_main.cpp  main.cpp
imperative/: .gitignore  CMakeLists.txt  README.md
imperative/python/: gen_version.py  requires-style.txt  requires-test.txt  requires.txt  setup.cfg  setup.py  version_template.py
imperative/src/: version.ld
imperative/tablegen/: CMakeLists.txt  autogen.cpp  checkhash.cmake  emitter.h  genhash.cmake  helper.h
imperative/test/: CMakeLists.txt
lite/: .gitattributes  CMakeLists.txt  README.md
lite/build_config/: lite_build_config.h  lite_build_config.h.in
lite/example/: CMakeLists.txt  example.h  main.cpp  npy.h
lite/load_and_run/: BUILD  CMakeLists.txt  dump_with_testcase.py  dump_with_testcase_mge.py
lite/pylite/: pylite.md  requires.txt  setup.py
lite/src/: function_base.h  global.cpp  lite_build_config.h.in  misc.cpp  misc.h  network.cpp  network_impl_base.h  tensor.cpp  tensor_impl_base.h  type_info.h  version_lite.ld
lite/test/: CMakeLists.txt  README_CN.md  main.cpp  test_common.h  test_io_options.cpp  test_lar_fast_run_options.cpp  test_lar_options.cpp  test_layout_options.cpp  test_misc.cpp  test_network.cpp  test_network_c.cpp  test_network_options.cpp  test_options.cpp  test_options.h  test_tensor.cpp  test_tensor_c.cpp
lite/tools/: aes_encrypt.sh  dump_model_mgb.py  rc4_encrypt.cpp
python_module/: .gitignore  CMakeLists.txt  requires-style.txt  requires-test.txt  requires.txt  setup.py
python_module/megengine/: __init__.py  logger.py  version.py
python_module/src/: version.ld
python_module/test/: .gitignore  README.md  conftest.py  run.sh
sdk/load-and-run/: .gitignore  BUILD  CMakeLists.txt  Makefile  README.md  dump_with_testcase_imperative.py  dump_with_testcase_mge.py  main.cpp
src/: CMakeLists.txt  bin_reduce_cmake.h  cuda_sm_gen.h.in  git_full_hash_header.h.in  megbrain_build_config.h.in  version.ld
src/jit/: README.md
test/: CMakeLists.txt
test/src/: autocheck.cpp  helper.cpp  host_static_calc.cpp  main.cpp  megdnn_helper.cpp  numerical_diff.cpp  rng_seed.cpp  rng_seed.h
(+7448 files in other folders)
